--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         movie_div.innerHTML = null;
         var search = movie_name;
             try {
-                let response = await fetch(`http://www.omdbapi.com/?apikey=3f6bb1c9&t=${search}`);
+                let response = await fetch(`https://www.omdbapi.com/?apikey=3f6bb1c9&t=${search}`);
                 let data = await response.json();
                 console.log(data)
                 displayData(data);
