--- a/index.html
+++ b/index.html
@@ -6,6 +6,242 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
+    <style>
+        @media only screen and (min-width: 0px) and (max-width: 375px) {
+            .container {
+                display: block;
+                width: 97%;
+            }
+            .container>div:nth-child(1){
+                display: block;
+                width: 90%;
+                text-align: center;
+            }
+            #row1_col1 {
+                padding: 20px;
+                padding-top: 0%;
+                margin: auto;
+            }
+            #row1_col1>input:nth-child(2) {
+                padding: 0px 0px;
+                text-align: center;
+                width: 50%;
+                height: 30px;
+                width: 90%;
+                font-size: 18px;
+                /* margin: auto; */
+            }
+            #movie {
+                font-size: 23px;
+            }
+            #movies {
+                display: block;
+                width: 99%;
+            }
+            .maindiv {
+                width: 99%;
+                margin: 4%;
+                height: 140px;
+            }
+            .image_div {
+                height: 100%;
+                width: 40%;
+            }
+            .discrip {
+                width: 50%;
+                margin-top: 2%;
+                margin-left: 1%;
+                font-size: 14px;
+            }
+            .discrip>p {
+                margin: 1%;
+                margin-bottom: 2%;
+            }
+            .image_div>img {
+                height: 100%;
+                width: 100%;
+            }
+            * {
+                font-family: Roboto, Helvetica, Arial, sans-serif;;
+            }
+            body {
+                background-color: rgb(56, 53, 53);
+                color: white;
+            }
+            #forsearch {
+                display: flex;
+                text-align: center;
+                width: 100%;
+                margin-top: 0%;
+                /* justify-content: center; */
+            }
+            #forsearch>img {
+                margin-top: 2%;
+                width: 30%;
+                height: 10%;
+            }
+            #forsearch>p {
+                margin-top: 4%;
+                margin-left: 0%;
+                font-size: 21px;
+            }
+            /* movie in detail css */
+            .main2_divD {
+                display: block;
+                width: 100%;
+                font-size: 12px;
+                overflow:hidden;
+                box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+            }
+            .main2_divD>div:last-child>p{
+                margin: 0%;
+                margin-top: 1%;
+                padding: 3px 0px;
+                margin-left: 2%;
+            }
+            .main2_divD>div:nth-child(1)>img{
+                width: 100%;
+                height: 50%;
+            }
+            .main2_divD>div:last-child>p:nth-child(1){
+                margin-top: 0%;
+            }
+            .main2_divD>div:last-child>p:last-child{
+                height: 57px;
+                overflow: scroll;
+            }
+            .main2_divD>div:last-child>p:last-child::-webkit-scrollbar {
+                display: none;
+            }
+            .main2_divD>div:last-child>p:nth-last-child(2){
+                height: 27px;
+                overflow: scroll;
+            }
+            .main2_divD>div:last-child>p:nth-last-child(2)::-webkit-scrollbar {
+                display: none;
+            }
+        }
+
+
+        @media only screen and (min-width: 375px) and (max-width: 768px) {
+            .container {
+                display: block;
+                width: 97%;
+            }
+            .container>div:nth-child(1){
+                display: block;
+                width: 90%;
+                text-align: center;
+            }
+            #row1_col1 {
+                padding: 20px;
+                padding-top: 0%;
+                margin: auto;
+            }
+            #row1_col1>input:nth-child(2) {
+                padding: 0px 0px;
+                text-align: center;
+                height: 30px;
+                width: 90%;
+                font-size: 18px;
+            }
+            #movie {
+                font-size: 23px;
+            }
+            #movies {
+                display: block;
+                width: 99%;
+            }
+            .maindiv {
+                width: 99%;
+                margin: 4%;
+                height: 140px;
+            }
+            .image_div {
+                height: 100%;
+                width: 20%;
+            }
+            .discrip {
+                width: 50%;
+                margin-top: 2%;
+                margin-left: 1%;
+                font-size: 18px;
+            }
+            .discrip>p {
+                margin: 1%;
+                margin-bottom: 2%;
+            }
+            .image_div>img {
+                height: 100%;
+                width: 100%;
+            }
+            * {
+                font-family: Roboto, Helvetica, Arial, sans-serif;;
+            }
+            body {
+                background-color: rgb(56, 53, 53);
+                color: white;
+            }
+            #forsearch {
+                display: flex;
+                text-align: center;
+                width: 100%;
+                margin-top: 0%;
+                /* justify-content: center; */
+            }
+            #forsearch>img {
+                margin-top: 2%;
+                width: 30%;
+                height: 10%;
+            }
+            #forsearch>p {
+                margin-top: 6%;
+                margin-left: 0%;
+                font-size: 25px;
+            }
+            /* movie in detail css */
+            .main2_divD {
+                display: flex;
+                width: 100%;
+                font-size: 17px;
+                overflow:hidden;
+            }
+            .main2_divD>div:last-child>p{
+                margin: 0%;
+                margin-top: 1%;
+                padding: 3px 0px;
+                margin-left: 2%;
+            }
+            .main2_divD>div:last-child {
+                width: 50%;
+            }
+            .main2_divD>div:nth-child(1){
+                width: 40%;
+                height: 100%;
+            }
+            .main2_divD>div:nth-child(1)>img{
+                width: 100%;
+                height: 60%;
+            }
+            .main2_divD>div:last-child>p:nth-child(1){
+                margin-top: 0%;
+            }
+            .main2_divD>div:last-child>p:last-child{
+                height: 57px;
+                overflow: scroll;
+            }
+            .main2_divD>div:last-child>p:last-child::-webkit-scrollbar {
+                display: none;
+            }
+            .main2_divD>div:last-child>p:nth-last-child(2){
+                height: 27px;
+                overflow: scroll;
+            }
+            .main2_divD>div:last-child>p:nth-last-child(2)::-webkit-scrollbar {
+                display: none;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -20,7 +256,7 @@
     </div>
 </body>
 </html>
-<script >
+<script>
     let movie_div = document.getElementById('movies');
     async function searchMovie() {
         
@@ -51,8 +287,6 @@
             var main_div = document.createElement('div');
             main_div.setAttribute('class','maindiv');
             main_div.addEventListener('click',function (){
-                console.log('ere')
-                console.log(index)
                 displayMovies(element.Title);
             })
             var divforimg = document.createElement('div');
