--- a/index.html
+++ b/index.html
@@ -32,30 +32,32 @@
                 /* margin: auto; */
             }
             #movie {
-                font-size: 23px;
+                font-size: 13px;
             }
             #movies {
                 display: block;
                 width: 99%;
             }
             .maindiv {
-                width: 99%;
+                width: 95%;
                 margin: 4%;
                 height: 140px;
+                margin-bottom: 5%;
+                box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
             }
             .image_div {
                 height: 100%;
                 width: 40%;
             }
             .discrip {
-                width: 50%;
+                width: 60%;
                 margin-top: 2%;
                 margin-left: 1%;
-                font-size: 14px;
             }
             .discrip>p {
+                font-size: 12px;
                 margin: 1%;
-                margin-bottom: 2%;
+                margin-bottom: 4%;
             }
             .image_div>img {
                 height: 100%;
@@ -122,7 +124,6 @@
             }
         }
 
-
         @media only screen and (min-width: 375px) and (max-width: 768px) {
             .container {
                 display: block;
@@ -153,19 +154,21 @@
                 width: 99%;
             }
             .maindiv {
-                width: 99%;
+                width: 95%;
                 margin: 4%;
                 height: 140px;
+                box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+
             }
             .image_div {
                 height: 100%;
-                width: 20%;
+                width: 30%;
             }
             .discrip {
                 width: 50%;
                 margin-top: 2%;
                 margin-left: 1%;
-                font-size: 18px;
+                font-size: 15px;
             }
             .discrip>p {
                 margin: 1%;
@@ -187,7 +190,6 @@
                 text-align: center;
                 width: 100%;
                 margin-top: 0%;
-                /* justify-content: center; */
             }
             #forsearch>img {
                 margin-top: 2%;
@@ -201,44 +203,18 @@
             }
             /* movie in detail css */
             .main2_divD {
-                display: flex;
+                display: block;
                 width: 100%;
                 font-size: 17px;
                 overflow:hidden;
-            }
-            .main2_divD>div:last-child>p{
-                margin: 0%;
-                margin-top: 1%;
-                padding: 3px 0px;
-                margin-left: 2%;
-            }
-            .main2_divD>div:last-child {
-                width: 50%;
+                box-shadow: none;
             }
             .main2_divD>div:nth-child(1){
-                width: 40%;
-                height: 100%;
+                margin: 20%;
+                margin-bottom: 0%;
             }
-            .main2_divD>div:nth-child(1)>img{
-                width: 100%;
-                height: 60%;
-            }
-            .main2_divD>div:last-child>p:nth-child(1){
+            .main2_divD>div:last-child {
                 margin-top: 0%;
-            }
-            .main2_divD>div:last-child>p:last-child{
-                height: 57px;
-                overflow: scroll;
-            }
-            .main2_divD>div:last-child>p:last-child::-webkit-scrollbar {
-                display: none;
-            }
-            .main2_divD>div:last-child>p:nth-last-child(2){
-                height: 27px;
-                overflow: scroll;
-            }
-            .main2_divD>div:last-child>p:nth-last-child(2)::-webkit-scrollbar {
-                display: none;
             }
         }
     </style>
